2012-08-27  Molnar Karoly  <proton7@freemail.hu>
  * lkr/18c601_g.lkr: Changed in "NAME=page" the "END=0x1FFFFF" onto
    the "END=0x3FFFF".
  * header/p12cr509a.inc: New? So far not exist, but the MCU included in
    the gpprocessor.c.

2012-08-27  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.old/testall:
    don't stop at the first failure, report the number of tests failed
  * gpasm/scan.l: force the scanner to always-interactive
  * pasm/evaluate.c: iterative reimplementation of list_length()
  * libgputils/gpsymbol.c, libgputils/gpsymbol.h:
    added functions hashfunc_len() and get_symbol_len()
  * gpasm/directive.c:
    fixed bug #253 - "[PIC16F]#ifdef problem around macro"

2012-08-19  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c: implemented but ifdef-ed out the fix for shift left > 32,
    another fix for shift right > 32, taking into accont the sign extension

2012-08-18  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c: implemented but ifdef-ed out the fix for bug
    #252 - "Problems interpreting hex numbers in gpasm" since the current
    behavior is MPASM compatible.

2012-08-16  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx: gpasm expressions are implemented using 32-bit arithmetic.
  * gpasm/util.c: implemented gp_strtoi(), partially fixed bug 
    #252: "Problems interpreting hex numbers in gpasm"

2012-08-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, libgputils/gpmemory.c:
    fixed bug #3555114 - "Segfault in gplink on uncategorized instruction"

2012-08-03  Molnar Karoly  <proton7@freemail.hu>
  * header/p16f1516.inc, header/p16f1517.inc, header/p16f1518.inc,
    header/p16f1519.inc: Removed ANSC{0,1} bits from "ANSELC Bits".

2012-08-02  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/evaluate.c, gpasm/evaluate.h:
    fixed bug #3542579 - "Option -c for gpasm causes different errors"
